# backend-test

./: colinha.md  infos.md  pyproject.toml
investApp/: db.sqlite3  manage.py
investApp/core/: models.py
investApp/core/api/: serializers.py  viewsets.py
investApp/core/migrations/: 0001_initial.py
investApp/investApp/: asgi.py  settings.py  urls.py  wsgi.py
